update to latest API spec
